# chess-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: App.h  Attack.h  Board.h  Config.h  Fen.h  Input.h  Layout.h  Perft.h  Piece.h  Pieces.h  Render.h  Sprites.h
src/: App.cpp  Attack.cpp  Board.cpp  Fen.cpp  Input.cpp  Layout.cpp  Perft.cpp  Pieces.cpp  Render.cpp  Sprites.cpp  main.cpp
tests/: perft_main.cpp
